<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <item android:id="@+id/main_menu"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/forfait_mobile"
                android:icon="@drawable/ic_tel"
                android:title="@string/forfait_mobile"
                android:orderInCategory="100"
                app:showAsAction="never" />
            <item
                android:id="@+id/box_internet"
                android:icon="@drawable/ic_maison"
                android:orderInCategory="100"
                android:title="@string/box_internet" />
            <item
                android:id="@+id/promos"
                android:icon="@drawable/ic_feu"
                android:orderInCategory="100"
                android:title="@string/promos" />
            <item
                android:id="@+id/international"
                android:icon="@drawable/ic_terre"
                android:orderInCategory="100"
                android:title="@string/international" />
            <item
                android:id="@+id/operateurs"
                android:icon="@drawable/ic_chapeau"
                android:orderInCategory="100"
                android:title="@string/operateurs" />
        </menu>
    </item>
</menu>